<?xml version="1.0"?>
<package format="2">
  <name>kimera_rviz_markers</name>
  <version>0.0.0</version>
  <description>TODO</description>

  <maintainer email="arosinol@mit.edu">Antoni Rosinol</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf</build_depend>

</package>
